--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <br>
 
         <label for="dob">Date of Birth</label>
-        <input type="text">
+        <input id="dob" type="text">
         <span></span>
 
         <button type="button">Register</button>
