--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Register for CPTC</h1>
+    <h2 id="message"></h2>
     <form>
         <label for="first-name">First Name</label>
         <input type="text" id="first-name">
